@@ -21,7 +21,6 @@ on the header of the respective files and since then updated
 as changes were applied:
 
 base/CMakeLists.txt: GPLv2+
-base/credentials.[c|h]: GPLv2+
 base/gpgme_util.[c|h]: GPLv2+
 base/nvticache.[c|h]: GPLv2+
 base/openvas_hosts.[c|h]: GPLv2+
