@@ -1,3 +1,13 @@
+2017-01-02  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>
+
+	Module "credentials" is now in gvm-libs/base.
+
+	* base/credentials.c, base/credentials.h: Removed.
+
+	* base/CMakeLists.txt: Removed handling of this module.
+
+	* COPYING: Removed the files respectively.
+
 2017-01-01  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>
 
 	Module "drop_privileges" is now in gvm-libs/base.
